fix: fix blank screen on ios devices

--- a/src/components/Layout/Page/styles.css
+++ b/src/components/Layout/Page/styles.css
@@ -29,6 +29,8 @@
 	padding-bottom: 3em;
 	word-break: break-word;
 	flex: 1 0 auto;
+	height: calc(100% + 1px);
+	-webkit-transform: translateZ(0);
 }
 
 @media (--break-lg) {
